--- a/trade_models-3.ipynb
+++ b/trade_models-3.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = 'big_data.json'\n",
+    "file = 'equal_bud.json'\n",
     "data = json.load(open(file,'rt',encoding='utf-8-sig'))\n",
     "player_ratings = {}\n",
     "player_picks = {}\n",
@@ -39,6 +39,7 @@
     "player_seasons = defaultdict(int)\n",
     "contracts = {}\n",
     "draft_picks = defaultdict(list)\n",
+    "player_draft_ageovr = {}\n",
     "draft_salaries = {}\n",
     "\n",
     "draft_pos_avg = {}\n",
@@ -54,6 +55,8 @@
     "    if dtid >= 0:\n",
     "        draft_picks[(dtid,p['draft']['year'])].append(dp)\n",
     "        draft_pos_avg[p['pid']] = dp\n",
+    "    if p['ratings'][0]['season'] ==  p['draft']['year']:\n",
+    "        player_draft_ageovr[p['pid']] = (p['draft']['ovr'],p['draft']['pot'],p['draft']['year']-p['born']['year'])\n",
     "    for r in p['ratings']:\n",
     "        player_seasons[p['pid']] += 1\n",
     "        player_ratings[(p['pid'],r['season'])] ={k:v for k,v in r.items() if type(v) == int and k != 'season'}\n",
@@ -128,6 +131,9 @@
     "won_cup = {}\n",
     "season_ratings = defaultdict(list)\n",
     "draft_pos_win = defaultdict(list)\n",
+    "draft_age_ovr_winX = []\n",
+    "draft_age_ovr_winy = []\n",
+    "draft_age_ovr_winp = []\n",
     "\n",
     "for team in data['teams']:\n",
     "    tid = team['tid']\n",
@@ -136,11 +142,50 @@
     "        if season['gp'] >= 82:\n",
     "            they_won = float(season['playoffRoundsWon'] >= 3) # not really finals -- 4\n",
     "            won_cup[(tid,s)] = they_won\n",
+    "            \n",
     "            season_ratings[s].append((season['won'],team_movs[(tid,s)]))\n",
     "            for i,v in enumerate(sorted([(player_ratings[(_,s)]['ovr'],draft_pos_avg[_]) for _ in team_players[(tid,s)] if _ in draft_pos_avg],reverse=True)):\n",
     "                r,p = v\n",
     "                if they_won:\n",
-    "                    draft_pos_win[p].append(i == 0)\n"
+    "                    draft_pos_win[p].append(i == 0)\n",
+    "            for i,v in enumerate(sorted([(player_ratings[(_,s)]['ovr'],player_draft_ageovr[_],draft_pos_avg[_]) for _ in team_players[(tid,s)] if _ in player_draft_ageovr and _ in draft_pos_avg],reverse=True)):\n",
+    "                if they_won:\n",
+    "                    draft_age_ovr_winX.append(v[1])\n",
+    "                    draft_age_ovr_winy.append(i == 0)\n",
+    "                    draft_age_ovr_winp.append(v[2]-1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "winX = np.array(draft_age_ovr_winX)\n",
+    "winY = np.array(draft_age_ovr_winy)\n",
+    "dp_ovr = sm.Logit(winY,sm.add_constant(winX)).fit()\n",
+    "\n",
+    "plt.hist(dp_ovr.predict())\n",
+    "dp_ovr.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xv = 4.3341 + winX[:,0]*0.1294 + winX[:,1]*0.0343 + winX[:,2]*(-0.7099)\n",
+    "1/(1+np.exp(-xv)),dp_ovr.predict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "winX[np.argmin(dp_ovr.predict())],100*min(dp_ovr.predict())"
    ]
   },
   {
@@ -172,9 +217,11 @@
     "    return np.linalg.norm(x[1]*np.exp(-x[0]*np.arange(60)**x[2]) - tv[:,1])\n",
     "draftP = opt.fmin(testX,[.3,.3,.6])\n",
     "    \n",
-    "plt.plot(tv[:,1])\n",
-    "plt.plot(draftP[1]*np.exp(-draftP[0]*np.arange(60)**draftP[2]))\n",
+    "plt.plot(tv[:,1],label='pos raw')\n",
+    "plt.plot(draftP[1]*np.exp(-draftP[0]*np.arange(60)**draftP[2]),label='pos exp fit')\n",
+    "plt.plot(pd.DataFrame([draft_age_ovr_winp,dp_ovr.predict()]).T.groupby(0).mean(),label='ovr/pot/age logit')\n",
     "plt.plot([0,60],[1/15,1/15],c='k',ls='--')\n",
+    "plt.legend()\n",
     "plt.xlabel('draft pick')\n",
     "plt.ylabel('chance of being the best player\\non a finals roster')"
    ]
@@ -203,7 +250,7 @@
     "clf_pos = sm.Logit(arr[:,0]/29,sm.add_constant(arr[:,1])).fit()\n",
     "\n",
     "xp = np.linspace(-15,15)\n",
-    "yp = 1/(1+np.exp(8.416 - 0.9239*(xp)))\n",
+    "yp = 1/(1+np.exp( 0.0048 - 0.4037*(xp)))\n",
     "plt.plot(xp,yp)\n",
     "plt.scatter(arr[:,1],clf_pos.predict(),c='r',alpha=0.1)\n",
     "\n",
@@ -320,7 +367,7 @@
     "def best_fit_func_exp(x):\n",
     "    return np.linalg.norm(( Xs1 @ np.exp(x[0]*np.arange(10))*x[1]-x[2] - ys1))\n",
     "a,b = np.polyfit(np.arange(10),np.log(np.array(res.params[1:])),1)\n",
-    "res2 = opt.minimize(best_fit_func_exp,[a,np.exp(b),-125],method='Nelder-Mead')\n",
+    "res2 = opt.minimize(best_fit_func_exp,[a,np.exp(b),101],method='Nelder-Mead')\n",
     "print(res2.x)"
    ]
   },
@@ -372,7 +419,7 @@
    "source": [
     "age_loop = defaultdict(list)\n",
     "for pid,s in player_ratings:\n",
-    "    if player_seasons[pid] < 14:\n",
+    "    if player_seasons[pid] < 15:\n",
     "        continue\n",
     "    k = (pid,s)\n",
     "    nk =(pid,s+1)\n",
@@ -418,7 +465,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sal_ovr"
+    "def get_rating(x):\n",
+    "    vec = []\n",
+    "    offset = len(x)//3\n",
+    "    x = np.round(x,2)\n",
+    "    x[:offset] *= 10\n",
+    "    x[-offset:] *= 10\n",
+    "    #x[:3] = np.array([72.8,61.5,39.5])\n",
+    "    #x[3:] = np.array([4.1,1.1,0.79, 13.2,9.5,8.8])\n",
+    "    for row in Xs1:\n",
+    "        tot = 0\n",
+    "        for i in range(offset):\n",
+    "            tot += (x[offset+i])*sum([np.tanh((_-x[i])/x[2*offset+i])+1.0 for _ in row])\n",
+    "            #print(x[i],row)\n",
+    "            #tot += 5*sum([float(_ > x[i]) for _ in row])\n",
+    "\n",
+    "        vec.append(tot)\n",
+    "    vec = np.array(vec)\n",
+    "    vec -= vec.mean()\n",
+    "    return ((vec-ys1)**2).mean()#,vec\n",
+    "\n",
+    "iv = [7.27, 7.28, 1.81]\n",
+    "r2 = get_rating(iv)\n",
+    "r2"
    ]
   },
   {
@@ -427,24 +496,113 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iv = np.array([71.3 ,  6.65, 17.4 ])\n",
+    "import scipy.optimize as opt\n",
+    "import cma\n",
     "\n",
+    "es = cma.CMAEvolutionStrategy(iv,0.5, {'tolx':1e-6,'tolfun':1e-6,'maxfevals':1000})\n",
+    "es.optimize(get_rating)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_rating(es.best.x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tv = np.round(es.best.x,2)\n",
+    "tv,get_rating(tv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iv = np.array(iv)\n",
+    "iv[:len(iv)//3] *=10\n",
+    "iv[-len(iv)//3:] *=10\n",
+    "iv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_rating_vec(x):\n",
+    "    vec = []\n",
+    "    offset = len(x)//3\n",
+    "    for row in Xs1:\n",
+    "        tot = 0\n",
+    "        for i in range(offset):\n",
+    "            tot += (x[offset+i])*sum([np.tanh((_-x[i])/x[2*offset+i])+1.0 for _ in row] ) \n",
+    "            #print(x[i],row)\n",
+    "            #tot += 5*sum([float(_ > x[i]) for _ in row])\n",
+    "\n",
+    "        vec.append(tot)\n",
+    "    vec = np.array(vec)\n",
+    "    #vec -= vec.mean()\n",
+    "    return vec\n",
+    "plt.figure(figsize=(5,5))\n",
+    "vt = get_rating_vec(iv)\n",
+    "vtm = vt.mean()/10\n",
+    "plt.scatter(ys1,vt-vtm*10,alpha=0.1,s=10)\n",
+    "#plt.scatter(ys,res.predict(),alpha=0.1,s=10)\n",
+    "\n",
+    "plt.xlabel('true MOV')\n",
+    "plt.ylabel('predicted MOV')\n",
+    "plt.xlim(-15,15)\n",
+    "plt.ylim(-15,15)\n",
+    "plt.grid(True)\n",
+    "print(-vtm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_mov(x):\n",
     "    offset = len(iv)//3\n",
-    "    tot = -1.977479789\n",
+    "    tot = -vtm\n",
     "    for i in range(offset):\n",
     "        tot += (iv[offset+i])*(np.tanh((x-iv[i])/iv[2*offset+i])+1.0)\n",
     "    return tot\n",
-    "\n",
-    "# estimated mov per ovr\n",
-    "o2m = {}\n",
-    "for i in np.arange(101):\n",
-    "    o2m[i] = get_mov(i)\n",
-    "\n",
-    "# replacement level\n",
+    "xp = np.linspace(0,101)\n",
+    "yp = [get_mov(_) for _ in xp]\n",
+    "plt.plot(xp,yp)\n",
+    "plt.grid(True)\n",
+    "print(vtm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "r_lvl = get_mov(int(round(RL)))\n",
-    "\n",
-    "\n",
+    "r_lvl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "mov = {i:get_mov(i) for i in range(101)}"
    ]
   },
@@ -473,13 +631,6 @@
     "sA = sO.params[0]\n",
     "sA"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -623,40 +774,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yp = {}\n",
-    "for i in range(YEARS_TO_MODEL):\n",
-    "    v = np.array(Xs[i])\n",
-    "    diff = (1.0-v[:,0])/3\n",
-    "    cap_space = np.maximum(diff,0.3*diff)\n",
-    "    mov_from_cap = cap_space*sA\n",
-    "    #pred_mov = v[:,1] + mov_from_cap\n",
-    "    RV = np.array([v[:,1], v[:,2],v[:,3],mov_from_cap]).T\n",
-    "    #if i==0:\n",
-    "    #    RV[:,1] *= 0\n",
-    "    #if i== 4:\n",
-    "    #    RV[:,0] *= 0\n",
-    "    pred = sm.OLS(ys[i],RV).fit()\n",
-    "    print(i,\":\",[0] + list(np.round(pred.params,2)),\",\",pred.rsquared)\n",
-    "    yp[i] = pred.predict()\n",
-    "    #print(i,mov_from_cap.mean(),v[:,1].mean())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "np.std(np.array(Xs[1]),axis=0),np.mean(np.array(Xs[1]),axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(yp[0])"
    ]
   },
   {
@@ -673,63 +791,44 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "plt.figure(figsize=(14,10),dpi=42)\n",
-    "for i in range(6):\n",
-    "    plt.subplot(2,3,i+1)\n",
-    "    XP = 100.0/(1+np.exp(-np.array(ys[i])*cA -cB))\n",
-    "\n",
-    "    YP = 100.0/(1+np.exp(-np.array(yp[i])*cA -cB))\n",
-    "    plt.scatter(XP,YP)\n",
-    "    plt.title('year {} pred'.format(i))\n",
-    "    plt.xlabel('actual finals%')\n",
-    "    plt.ylabel('pred finals%')\n",
-    "    plt.xlim(0,100)\n",
-    "    plt.ylim(0,100)\n",
-    "plt.tight_layout()"
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
