--- a/trade_prototype-3.ipynb
+++ b/trade_prototype-3.ipynb
@@ -18,11 +18,11 @@
    "outputs": [],
    "source": [
     "# all this +/- stuff is only really used for the 'current year MOV' prediction\n",
-    "iv = np.array([71.3 ,  6.65, 17.4 ])\n",
+    "iv = np.array([72.7 ,  7.28, 18.1 ])\n",
     "\n",
     "def get_mov(x):\n",
     "    offset = len(iv)//3\n",
-    "    tot = -1.977479789\n",
+    "    tot = -2.021381747657189\n",
     "    for i in range(offset):\n",
     "        tot += (iv[offset+i])*(np.tanh((x-iv[i])/iv[2*offset+i])+1.0)\n",
     "    return tot\n",
@@ -33,47 +33,50 @@
     "    o2m[i] = get_mov(i)\n",
     "\n",
     "# replacement level\n",
-    "r_lvl = -1.425\n",
+    "r_lvl = -1.4351774267651591\n",
     "\n",
-    "\n",
-    "age_shift ={19: 6.4,\n",
-    " 20: 6.7,\n",
-    " 21: 5.0,\n",
-    " 22: 4.4,\n",
+    "age_shift ={19: 6.6,\n",
+    " 20: 7.2,\n",
+    " 21: 5.1,\n",
+    " 22: 4.6,\n",
     " 23: 2.2,\n",
-    " 24: 2.0,\n",
-    " 25: 0.1,\n",
-    " 26: -0.1,\n",
-    " 27: -1.2,\n",
-    " 28: -1.4,\n",
-    " 29: -2.0,\n",
-    " 30: -2.7,\n",
-    " 31: -3.6,\n",
-    " 32: -3.7,\n",
-    " 33: -3.7,\n",
+    " 24: 2.2,\n",
+    " 25: 0.2,\n",
+    " 26: 0.1,\n",
+    " 27: -1.0,\n",
+    " 28: -1.1,\n",
+    " 29: -1.7,\n",
+    " 30: -2.4,\n",
+    " 31: -3.4,\n",
+    " 32: -3.5,\n",
+    " 33: -3.6,\n",
     " 34: -4.7,\n",
-    " 35: -5.1}\n",
+    " 35: -5.0}\n",
     "\n",
     "max_shift = min(age_shift.values())\n",
     "\n",
     "# replacement level\n",
-    "RL = 45.3\n",
+    "RL = 44.37\n",
     "\n",
     "# expected mov, weight for players, weight for salary cap space\n",
     "weights = {\n",
-    "0 : ( [0.759, 1.021] , 1.26 ),\n",
-    "1 : ( [11.133, 0.709] , 1.89 ),\n",
-    "2 : ( [9.198, 0.478] , 2.77 ),\n",
+    "0 : ( [-1.019, 0.99] , 1.22 ),\n",
+    "1 : ( [9.559, 0.631] , 2.05 ),\n",
+    "2 : ( [7.214, 0.37] , 3.62 ),\n",
     "}\n",
     "\n",
     "# draft value\n",
-    "draftP = np.array([0.33331122, 0.30847174, 0.58789643])\n",
+    "draftP = np.array([0.27988742, 0.30226007, 0.62866095])\n",
+    "def winp_draft(ovr,pot,age):\n",
+    "    xv = 4.3341 + ovr*0.1294 + pot*0.0343 + age*(-0.7099)\n",
+    "    return 1/(1+np.exp(-xv))\n",
+    "\n",
     "\n",
     "# team value\n",
-    "team_mov = [-0.17330874,  0.33627302, 99.72968488]\n",
+    "team_mov = [ -0.20384938,   0.3719406,  101.37586688]\n",
     "\n",
     "# salary multiplier\n",
-    "sA = 3.148966624999395"
+    "sA = 4.020403849764475"
    ]
   },
   {
@@ -82,17 +85,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team = { 'mov': -4, \n",
-    "        'p' : [(22,66,22000,2),(22,66,22000,2),(22,66,22000,2),(22,66,22000,5)], #(age,ovr,salary,years_left)\n",
+    "age_shift_int = defaultdict(int)\n",
+    "age_min,age_max = min(age_shift.keys()),max(age_shift.keys())\n",
+    "total_age_prog = sum([v for k,v in age_shift.items() if v > 0])\n",
+    "for age in range(age_min,age_max):\n",
+    "    left_over = sum([age_shift[_] for _ in range(age,age_max) if age_shift[_] >=0])\n",
+    "    if left_over > 0:\n",
+    "        age_shift_int[age] = left_over/total_age_prog\n",
+    "age_shift_int    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team = { 'p' : [(22,66,22000,2,0),(22,66,22000,2,0),(22,66,22000,2,0),(22,66,22000,5,0)], #(age,ovr,salary,years_left,draf_val)\n",
     "         'd' : [(1, 0, 8.6),(1, 0, -5.35),(2,0,3),(1,1,3),(2,1,3),(1,2,3),(2,2,3),(1,3,3),(2,3,3),(1,4,3),(2,4,3)] #(round,years_left,team_MOV)\n",
     "       }\n",
     "def get_team_value(team,sCap=90000,minS=750):\n",
     "    YEARS_TO_MODEL = 3\n",
     "    teamNum = 30\n",
-    "    CON_BUMP = 0.25\n",
     "    \n",
     "    # turn mov into draft pick and future mov\n",
-    "    m2pos = lambda x: int(round(np.clip( (teamNum-1)/(1+np.exp(0.0036 - 0.368*(x))),0,teamNum-1)))\n",
+    "    m2pos = lambda x: int(round(np.clip( (teamNum-1)/(1+np.exp(0.0048 - 0.4037*(x))),0,teamNum-1)))\n",
     "    m2next = lambda year,mov: [1,0.5,0.25,0.08,0.03,0.01,0.01,0.01,0.01,0.01][year]*mov \n",
     "\n",
     "    # turn draft picks into specific predictions\n",
@@ -104,13 +121,13 @@
     "\n",
     "    dpars = []\n",
     "    for i in range(YEARS_TO_MODEL):\n",
-    "        for age,ovr,con,yrl in team['p']:\n",
+    "        for age,ovr,con,yrl,draft_v in team['p']:\n",
     "            tss[i] += con\n",
     "            ovr2 = ovr\n",
     "            for j in range(max(0,i-1)):\n",
     "                ovr2+=age_shift.get(age+j,max_shift)\n",
     "            pars[i].append(ovr2)\n",
-    "    for age,ovr,con,yrl in team['p']:\n",
+    "    for age,ovr,con,yrl,draft_v in team['p']:\n",
     "        if yrl >= YEARS_TO_MODEL:\n",
     "            #print('yES',(age,ovr,con,yrl))\n",
     "            ovr2  =ovr\n",
@@ -124,8 +141,12 @@
     "            amount_to_add = sum(cvals[YEARS_TO_MODEL:])/YEARS_TO_MODEL\n",
     "            for i  in range(YEARS_TO_MODEL):\n",
     "                tss[i] -= amount_to_add\n",
+    "    \n",
     "    for yr,p in draft_picks:\n",
-    "        dpars.append((0.99**yr)*draftP[1]*np.exp(-draftP[0]*p**draftP[2]))\n",
+    "        dpars.append((0.95**yr)*draftP[1]*np.exp(-draftP[0]*p**draftP[2]))\n",
+    "        \n",
+    "    for age,ovr,con,yrl,draft_v in team['p']:\n",
+    "        dpars.append(age_shift_int[age]*draft_v)\n",
     "    \n",
     "    pred_movs = []\n",
     "    for i in range(YEARS_TO_MODEL):\n",
@@ -146,7 +167,7 @@
     "        \n",
     "        pred_movs.append(p_mov)\n",
     "        \n",
-    "    cA,cB = (0.42422076396359476, -3.94406073999211)\n",
+    "    cA,cB = (.47854580217902276, -4.016030120527145)\n",
     "\n",
     "    win_p = [1.0/(1+np.exp(-mov*cA -cB)) for mov in pred_movs]\n",
     "\n",
@@ -172,6 +193,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "team_players = defaultdict(list)\n",
     "team_names = {}\n",
@@ -187,8 +215,11 @@
     "        age = season - p['born']['year']\n",
     "        salary = p['contract']['amount']\n",
     "        years_left = p['contract']['exp']-season\n",
-    "        team_players[p['tid']].append((age,ovr,salary,years_left))\n",
-    "        team_injuries[p['tid']].append(p['injury']['gamesRemaining'])\n"
+    "        dp = p['draft']['pick'] + 30 * (p['draft']['round']-1)\n",
+    "        if dp < 0:\n",
+    "            dp = 61\n",
+    "        team_players[p['tid']].append((age,ovr,salary,years_left,draftP[1]*np.exp(-draftP[0]*dp**draftP[2])))\n",
+    "        team_injuries[p['tid']].append(p['injury']['gamesRemaining'])"
    ]
   },
   {
@@ -408,15 +439,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "team_test = {'mov':team_movs[7],'d':team_picks[7],'p':team_players[7]}"
    ]
   },
@@ -437,37 +459,43 @@
    },
    "outputs": [],
    "source": [
-    "team_test2 = {'mov': -5.372719925920409,\n",
-    " 'd': [(1, 0, -5.372719925920409),\n",
-    "  (2, 0, -5.372719925920409),\n",
-    "  (2, 0, 9.030763602443432),\n",
-    "  (1, 1, -5.372719925920409),\n",
-    "  (2, 1, -4.958921830230271),\n",
-    "  (2, 1, 4.178927470632469),\n",
-    "  (1, 2, -5.372719925920409),\n",
-    "  (2, 2, -5.372719925920409),\n",
-    "  (2, 2, -4.958921830230271),\n",
-    "  (1, 3, -5.372719925920409),\n",
-    "  (2, 3, -5.372719925920409),\n",
-    "  (2, 3, -7.548780876962224),\n",
-    "  (1, 4, -5.372719925920409),\n",
-    "  (2, 4, -5.372719925920409),\n",
-    "  (1, 5, -5.372719925920409),\n",
-    "  (2, 5, -5.372719925920409),\n",
-    "  (2, 5, -0.5734780821022222),\n",
-    "  (1, 6, -5.372719925920409),\n",
-    "  (2, 6, -5.372719925920409),\n",
-    "  (2, 6, -4.91664629842538)],\n",
-    " 'p': [(31, 50, 13350, 1),\n",
-    "  (26, 58, 17500, 2),\n",
-    "  (25, 27, 1700, 0),\n",
-    "  (22, 31, 1550, 1),\n",
-    "  (23, 25, 950, 0),\n",
-    "  (21, 51, 4850, 2),\n",
-    "  (22, 56, 4250, 1),\n",
-    "  (22, 58, 6650, 1),\n",
-    "  (23, 52, 8050, 2),\n",
-    "  (23, 59, 4150, 0),]}\n",
+    "team_test2 = {'mov': -5.482382353981168,\n",
+    " 'd': [(1, 0, -5.482382353981168),\n",
+    "  (2, 0, -5.482382353981168),\n",
+    "  (2, 0, 9.085203576451224),\n",
+    "  (1, 1, -5.482382353981168),\n",
+    "  (2, 1, -5.076082713949978),\n",
+    "  (2, 1, 4.0382054499133755),\n",
+    "  (1, 2, -5.482382353981168),\n",
+    "  (2, 2, -5.482382353981168),\n",
+    "  (2, 2, -5.076082713949978),\n",
+    "  (1, 3, -5.482382353981168),\n",
+    "  (2, 3, -5.482382353981168),\n",
+    "  (2, 3, -7.647603332074514),\n",
+    "  (1, 4, -5.482382353981168),\n",
+    "  (2, 4, -5.482382353981168),\n",
+    "  (1, 5, -5.482382353981168),\n",
+    "  (2, 5, -5.482382353981168),\n",
+    "  (2, 5, -0.6651492516752459),\n",
+    "  (1, 6, -5.482382353981168),\n",
+    "  (2, 6, -5.482382353981168),\n",
+    "  (2, 6, -5.051141623873145)],\n",
+    " 'p': [(31, 50, 13350, 2, 0.007400055732949782),\n",
+    "  (26, 58, 17500, 3, 0.036373312235063106),\n",
+    "  (32, 43, 19000, 0, 0.05087529943560001),\n",
+    "  (43, 36, 2500, 0, 0.13997323937839157),\n",
+    "  (25, 27, 1700, 1, 0.007400055732949782),\n",
+    "  (22, 31, 1550, 2, 0.023156748165624817),\n",
+    "  (23, 25, 950, 1, 0.007400055732949782),\n",
+    "  (21, 51, 4850, 3, 0.09192940831774696),\n",
+    "  (22, 56, 4250, 2, 0.05087529943560001),\n",
+    "  (22, 58, 6650, 2, 0.13997323937839157),\n",
+    "  (23, 52, 8050, 3, 0.15481216217313457),\n",
+    "  (23, 59, 4150, 1, 0.05087529943560001),\n",
+    "  (27, 39, 1500, 0, 0.007400055732949782),\n",
+    "  (26, 43, 2600, 0, 0.04531599594096907),\n",
+    "  (24, 47, 2350, 0, 0.031108243072596267),\n",
+    "  (25, 42, 1600, 0, 0.02812560393241915)]}\n",
     "get_team_value(team_test2,sCap,minS)"
    ]
   },
@@ -477,38 +505,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_test2 = {'mov': -5.372719925920409,\n",
+    "team_test2 = {'mov': -5.482382353981168,\n",
     " 'd': [\n",
-    "  (2, 0, -5.372719925920409),\n",
-    "  (2, 0, 9.030763602443432),\n",
-    "  (1, 1, -5.372719925920409),\n",
-    "  (2, 1, -4.958921830230271),\n",
-    "  (2, 1, 4.178927470632469),\n",
-    "  (1, 2, -5.372719925920409),\n",
-    "  (2, 2, -5.372719925920409),\n",
-    "  (2, 2, -4.958921830230271),\n",
-    "  (1, 3, -5.372719925920409),\n",
-    "  (2, 3, -5.372719925920409),\n",
-    "  (2, 3, -7.548780876962224),\n",
-    "  (1, 4, -5.372719925920409),\n",
-    "  (2, 4, -5.372719925920409),\n",
-    "  (1, 5, -5.372719925920409),\n",
-    "  (2, 5, -5.372719925920409),\n",
-    "  (2, 5, -0.5734780821022222),\n",
-    "  (1, 6, -5.372719925920409),\n",
-    "  (2, 6, -5.372719925920409),\n",
-    "  (2, 6, -4.91664629842538)],\n",
-    " 'p': [(20,50,7500,3),\n",
-    "    (31, 50, 13350, 1),\n",
-    "  (26, 58, 17500, 2),\n",
-    "  (25, 27, 1700, 0),\n",
-    "  (22, 31, 1550, 1),\n",
-    "  (23, 25, 950, 0),\n",
-    "  (21, 51, 4850, 2),\n",
-    "  (22, 56, 4250, 1),\n",
-    "  (22, 58, 6650, 1),\n",
-    "  (23, 52, 8050, 2),\n",
-    "  (23, 59, 4150, 0),]}\n",
+    "  (2, 0, -5.482382353981168),\n",
+    "  (2, 0, 9.085203576451224),\n",
+    "  (1, 1, -5.482382353981168),\n",
+    "  (2, 1, -5.076082713949978),\n",
+    "  (2, 1, 4.0382054499133755),\n",
+    "  (1, 2, -5.482382353981168),\n",
+    "  (2, 2, -5.482382353981168),\n",
+    "  (2, 2, -5.076082713949978),\n",
+    "  (1, 3, -5.482382353981168),\n",
+    "  (2, 3, -5.482382353981168),\n",
+    "  (2, 3, -7.647603332074514),\n",
+    "  (1, 4, -5.482382353981168),\n",
+    "  (2, 4, -5.482382353981168),\n",
+    "  (1, 5, -5.482382353981168),\n",
+    "  (2, 5, -5.482382353981168),\n",
+    "  (2, 5, -0.6651492516752459),\n",
+    "  (1, 6, -5.482382353981168),\n",
+    "  (2, 6, -5.482382353981168),\n",
+    "  (2, 6, -5.051141623873145)],\n",
+    " 'p': [(31, 50, 13350, 2, 0.007400055732949782),\n",
+    "  (26, 58, 17500, 3, 0.036373312235063106),\n",
+    "  (32, 43, 19000, 0, 0.05087529943560001),\n",
+    "  (43, 36, 2500, 0, 0.13997323937839157),\n",
+    "  (25, 27, 1700, 1, 0.007400055732949782),\n",
+    "  (22, 31, 1550, 2, 0.023156748165624817),\n",
+    "  (23, 25, 950, 1, 0.007400055732949782),\n",
+    "  (21, 51, 4850, 3, 0.09192940831774696),\n",
+    "  (22, 56, 4250, 2, 0.05087529943560001),\n",
+    "  (22, 58, 6650, 2, 0.13997323937839157),\n",
+    "  (23, 52, 8050, 3, 0.15481216217313457),\n",
+    "  (23, 59, 4150, 1, 0.05087529943560001),\n",
+    "  (27, 39, 1500, 0, 0.007400055732949782),\n",
+    "  (26, 43, 2600, 0, 0.04531599594096907),\n",
+    "  (24, 47, 2350, 0, 0.031108243072596267),\n",
+    "  (25, 42, 1600, 0, 0.02812560393241915)]}\n",
     "get_team_value(team_test2,sCap,minS)"
    ]
   },
@@ -528,36 +561,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_test2 = {\n",
-    "    'mov':team_movs[2],\n",
-    "    'd': [(2, 0, 1.652969631948502),\n",
-    " (2, 0, 0.05698951843920175),\n",
-    " (2, 1, 4.407755127986256),\n",
-    " (1, 1, -4.91664629842538),\n",
-    " (1, 1, -3.306876503590236),\n",
-    " (2, 1, -3.306876503590236),\n",
-    " (1, 2, -4.91664629842538),\n",
-    " (2, 2, -4.91664629842538),\n",
-    " (2, 2, 6.825253437957853),\n",
-    " (1, 3, -4.91664629842538),\n",
-    " (1, 5, -4.91664629842538),\n",
-    " (2, 5, -4.91664629842538),\n",
-    " (1, 6, -4.91664629842538)],\n",
-    " 'p': [(24, 51, 4800, 2),\n",
-    " (24, 55, 1650, 2),\n",
-    " (25, 59, 29550, 3),\n",
-    " (27, 22, 1650, 2),\n",
-    " (21, 25, 3900, 3),\n",
-    " (30, 59, 20200, 4),\n",
-    " (30, 64, 38000, 4),\n",
-    " (32, 68, 40250, 2),\n",
-    " (26, 26, 1650, 2),\n",
-    " (23, 46, 1800, 1),\n",
-    " (27, 26, 100, 0),\n",
-    " (20, 33, 1750, 3),\n",
-    " (23, 38, 200, 0),\n",
-    " (28, 38, 1850, 2),\n",
-    " (23, 29, 1650, 2)]}\n",
+    "team_test2 = {'mov': -5.051141623873145,\n",
+    " 'd': [(2, 0, 1.5294398686913402),\n",
+    "  (2, 0, -0.11763123883654236),\n",
+    "  (2, 1, 4.253735265080072),\n",
+    "  (1, 1, -5.051141623873145),\n",
+    "  (1, 1, -3.4271516708022802),\n",
+    "  (2, 1, -3.4271516708022802),\n",
+    "  (1, 2, -5.051141623873145),\n",
+    "  (2, 2, -5.051141623873145),\n",
+    "  (2, 2, 6.640651174426148),\n",
+    "  (1, 3, -5.051141623873145),\n",
+    "  (1, 5, -5.051141623873145),\n",
+    "  (2, 5, -5.051141623873145),\n",
+    "  (1, 6, -5.051141623873145)],\n",
+    " 'p': [(24, 51, 4800, 2, 0.02812560393241915),\n",
+    "  (24, 55, 1650, 2, 0.01680073169357861),\n",
+    "  (25, 59, 29550, 3, 0.22846896618569987),\n",
+    "  (27, 22, 1650, 2, 0.007400055732949782),\n",
+    "  (21, 25, 3900, 3, 0.031108243072596267),\n",
+    "  (30, 59, 20200, 4, 0.022088150606323197),\n",
+    "  (30, 64, 38000, 4, 0.08541509934145018),\n",
+    "  (32, 68, 40250, 2, 0.11675830647455769),\n",
+    "  (26, 26, 1650, 2, 0.007400055732949782),\n",
+    "  (23, 46, 1800, 1, 0.10742693347018893),\n",
+    "  (27, 26, 100, 0, 0.007400055732949782),\n",
+    "  (20, 33, 1750, 3, 0.018372688753582653),\n",
+    "  (23, 38, 200, 0, 0.15481216217313457),\n",
+    "  (28, 38, 1850, 2, 0.007400055732949782),\n",
+    "  (23, 29, 1650, 2, 0.007400055732949782)]}\n",
     "get_team_value(team_test2,sCap,minS)"
    ]
   },
@@ -567,7 +599,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_players[2]"
+    "team_test = {'mov':team_movs[22],'d':team_picks[22],'p':team_players[22]}"
    ]
   },
   {
@@ -575,14 +607,82 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "team_test = {'mov': 1.5294398686913402,\n",
+    " 'd': [(1, 0, 1.5294398686913402),\n",
+    "  (2, 0, -5.051141623873145),\n",
+    "  (2, 1, 1.5294398686913402),\n",
+    "  (1, 2, 1.5294398686913402),\n",
+    "  (2, 2, 1.5294398686913402),\n",
+    "  (2, 3, 1.5294398686913402),\n",
+    "  (2, 3, 4.0382054499133755),\n",
+    "  (1, 4, 1.5294398686913402),\n",
+    "  (2, 4, 1.5294398686913402),\n",
+    "  (1, 5, 1.5294398686913402),\n",
+    "  (2, 5, 1.5294398686913402),\n",
+    "  (1, 6, 1.5294398686913402),\n",
+    "  (2, 6, 1.5294398686913402)],\n",
+    " 'p': [(32, 48, 5600, 1, 0.007400055732949782),\n",
+    "  (23, 26, 900, 1, 0.007400055732949782),\n",
+    "  (29, 52, 10050, 3, 0.014115227391274273),\n",
+    "  (27, 46, 2250, 1, 0.12747982320989207),\n",
+    "  (25, 66, 31650, 4, 0.15481216217313457),\n",
+    "  (27, 44, 13000, 0, 0.19608449676058912),\n",
+    "  (28, 54, 8500, 3, 0.007400055732949782),\n",
+    "  (21, 66, 8100, 2, 0.17293338922302573),\n",
+    "  (26, 26, 900, 1, 0.007400055732949782),\n",
+    "  (35, 38, 12000, 0, 0.042834501080659414),\n",
+    "  (36, 41, 3650, 0, 0.007400055732949782),\n",
+    "  (28, 56, 17750, 1, 0.038378007300704536),\n",
+    "  (28, 36, 1900, 0, 0.09921659340181611),\n",
+    "  (30, 48, 8000, 3, 0.007400055732949782),\n",
+    "  (24, 44, 1550, 2, 0.024289644129968053),\n",
+    "  (28, 55, 9000, 2, 0.047989461040794185),\n",
+    "  (25, 48, 5050, 1, 0.06506895926938651),\n",
+    "  (27, 58, 4000, 2, 0.007400055732949782)]}\n",
+    "get_team_value(team_test,sCap,minS)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "team_test = {'mov': 1.5294398686913402,\n",
+    " 'd': [(1, 0, 1.5294398686913402),\n",
+    "  (2, 0, -5.051141623873145),\n",
+    "  (2, 1, 1.5294398686913402),\n",
+    "  (1, 2, 1.5294398686913402),\n",
+    "  (2, 2, 1.5294398686913402),\n",
+    "  (2, 3, 1.5294398686913402),\n",
+    "  (2, 3, 4.0382054499133755),\n",
+    "  (1, 4, 1.5294398686913402),\n",
+    "  (2, 4, 1.5294398686913402),\n",
+    "  (1, 5, 1.5294398686913402),\n",
+    "  (2, 5, 1.5294398686913402),\n",
+    "  (1, 6, 1.5294398686913402),\n",
+    "  (2, 6, 1.5294398686913402)],\n",
+    " 'p': [(32, 48, 5600, 1, 0.007400055732949782),\n",
+    "  (23, 26, 900, 1, 0.007400055732949782),\n",
+    "  (29, 52, 10050, 3, 0.014115227391274273),\n",
+    "  (27, 46, 2250, 1, 0.12747982320989207),\n",
+    "  (25, 66, 31650, 4, 0.15481216217313457),\n",
+    "  (27, 44, 13000, 0, 0.19608449676058912),\n",
+    "  (28, 54, 8500, 3, 0.007400055732949782),\n",
+    "  (21, 66, 8100, 2, 0.17293338922302573),\n",
+    "  (26, 26, 900, 1, 0.007400055732949782),\n",
+    "  (35, 38, 12000, 0, 0.042834501080659414),\n",
+    "  (36, 41, 3650, 0, 0.007400055732949782),\n",
+    "  (28, 56, 17750, 1, 0.038378007300704536),\n",
+    "  (28, 36, 1900, 0, 0.09921659340181611),\n",
+    "  (30, 48, 8000, 3, 0.007400055732949782),\n",
+    "  (24, 44, 1550, 2, 0.024289644129968053),\n",
+    "  (28, 55, 9000, 2, 0.047989461040794185),\n",
+    "  (25, 48, 5050, 1, 0.06506895926938651),\n",
+    "  (27, 58, 4000, 2, 0.007400055732949782)]}\n",
+    "get_team_value(team_test,sCap,minS)"
+   ]
   },
   {
    "cell_type": "code",
